# oskit

./: README.md  nohup.out  pyproject.toml
src/oskit/: __init__.py  file_renamer.py  ipscan.py  pwr.py  serialscan.py  shutdown_delayed.py  sound_output_toggle.py
src/oskit/cli/: file_renamer_cli.py
src/oskit/gui/: file_renamer_gui.py
tests/: test_file_renamer.py
