[project]
name = "oskit"
version = "0.1.0"
description = "Collection of OS tools"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Michal Pech", email = "michal.pech@radalytica.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ipscan = "oskit.ipscan:main"
filerenamer = "oskit.cli.file_renamer_cli:main"
soundtoggle = "oskit.sound_output_toggle:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
